Se consigue un recurso del contenedor